--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/meatballs.html">Meatball Recipe</a></li>
+        <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+    </ul>
 </body>
 </html>
